Removing last users logic

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -12,15 +12,12 @@ block content
 
   section
     div.row
-      div.large-9.columns
+      div.large-9.columns.medium-9
         section#quizmain
-      div.large-3.columns
+      div.large-3.columns.medium-3
         div.row
           div.large-12
             section#topusers
-        div.row
-          div.large-12
-            section#lastusers
 
   script#top-users-template(type="text/template").
     <h4><%= title %></h4>
